--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>TRM Lab 2</title>
+    <title>TRM Lab 2 - Branching Logic</title>
 
     <script
         src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
@@ -68,6 +68,12 @@
                 position="0 0 -4" rotation="-90 0 0" visible="false"></a-entity>
         </a-nft>
 
+        <a-nft id="markerD" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/sushi_menu/sushi_menu"
+            smooth="true" smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
+            <a-entity class="modelD" gltf-model="https://lucian-lu.github.io/trm-lab-2/models/sushi.glb" scale="5 5 5"
+                position="0 0 -4" rotation="-90 0 0" visible="false"></a-entity>
+        </a-nft>
+
         <a-entity camera>
             <a-text id="startText" value="I feel quite hungry! Time to go out." position="-1 -0.75 -5" color="yellow"
                 width="2.5" scale="1 1 1" rotation="0 0 0" align="left" anchor="left">
@@ -77,11 +83,15 @@
                 position="-1 -0.75 -5" scale="1 1 1" visible="false">
             </a-text>
 
-            <a-text class="textB" value="I think I'll get some ramen." color="red" width="2.5" rotation="0 0 0"
+            <a-text class="textB" value="Hmmm... should I get ramen or sushi?" color="red" width="2.5" rotation="0 0 0"
                 position="-1 -0.75 -5" scale="1 1 1" visible="false">
             </a-text>
 
             <a-text class="textC" value="Mmm tasty. Ramen is the best." color="coral" width="2.5" rotation="0 0 0"
+                position="-1 -0.75 -5" scale="1 1 1" visible="false">
+            </a-text>
+
+            <a-text class="textD" value="Sushi is amazing!" color="white" width="2.5" rotation="0 0 0"
                 position="-1 -0.75 -5" scale="1 1 1" visible="false">
             </a-text>
 
@@ -95,12 +105,18 @@
         const markerA = document.getElementById('markerA');
         const markerB = document.getElementById('markerB');
         const markerC = document.getElementById('markerC');
+        const markerD = document.getElementById('markerD');
 
         function reveal(selectorModel, selectorText) {
             const m = document.querySelector(selectorModel);
             const t = document.querySelector(selectorText);
             if (m) m.setAttribute('visible', 'true');
             if (t) t.setAttribute('visible', 'true');
+        }
+
+        function hideText(selectorText) {
+            const t = document.querySelector(selectorText);
+            if (t) t.setAttribute('visible', 'false');
         }
 
         markerA.addEventListener('markerFound', () => {
@@ -126,10 +142,20 @@
         markerC.addEventListener('markerFound', () => {
             if (!scannedB) return;
 
-            const textB = document.querySelector('.textB');
-            if (textB) textB.setAttribute('visible', 'false');
-
+            hideText('.textB');
+            
+            hideText('.textD');
             reveal('.modelC', '.textC');
+        });
+
+        markerD.addEventListener('markerFound', () => {
+            if (!scannedB) return;
+
+            hideText('.textB');
+
+            hideText('.textC');
+
+            reveal('.modelD', '.textD');
         });
     </script>
 </body>
