--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_bar_entrance_2/ramen_bar_entrance_2" smooth="true"
             smoothCount="10" smoothTolerance=".01" smoothThreshold="5">
             <a-entity class="modelC" gltf-model="https://lucian-lu.github.io/trm-lab-2/models/ramen_bar_2.glb"
-                scale="20 20 20" position="10 0 -5" rotation="-90 0 0" visible="false"></a-entity>
+                scale="15 15 15" position="10 0 -5" rotation="-90 0 0" visible="false"></a-entity>
         </a-nft>
 
         <a-nft id="markerD" type="nft" url="https://lucian-lu.github.io/trm-lab-2/nft/ramen_menu/ramen_menu"
@@ -84,11 +84,11 @@
                 position="-0.75 -1.25 -5" scale="1 1 1" visible="false">
             </a-text>
 
-            <a-text class="textB" value="Hmmm... should I get some ramen outside?" color="red" width="2.5"
+            <a-text class="textB" value="Maybe I should eat inside. It's getting cold." color="red" width="2.5"
                 rotation="0 0 0" position="-1 -1.25 -5" scale="1 1 1" visible="false">
             </a-text>
 
-            <a-text class="textC" value="Maybe I should eat inside. It's getting cold." color="coral" width="1.75"
+            <a-text class="textC" value="Hmmm... should I get some ramen outside?" color="coral" width="1.75"
                 rotation="0 0 0" position="-1 -1.25 -5" scale="1 1 1" visible="false">
             </a-text>
 
